--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ body{
 .footer{
     position: absolute;
     width: 100%;
-    height: 90px;
+    height: 50px;
     left: 0px;
     bottom: 0;
     background: #232323;
@@ -117,6 +117,120 @@ body{
 
 .footer-text{
     color: white;
+}
+
+.bodysite{
+
+}
+
+.buttons{
+    position: absolute;
+    width: 900px;
+    height: 800px;
+    right: 0.5%;
+    top: 15%;
+}
+
+.button1{
+    box-sizing: border-box;
+    position: absolute;
+    width: 434px;
+    height: 122px;
+    right: 43px;
+    bottom: 724px;
+
+    background: #D9D9D9;
+    border: 3px solid #000000;
+    box-shadow: 0px 10px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+}
+.button1-text{
+    position: absolute;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-size: 40px;
+    font-weight: bold;
+    right: 13%;
+    top: 25%;
+    color: #232323;
+}
+
+.button2{
+    box-sizing: border-box;
+    position: absolute;
+    width: 434px;
+    height: 122px;
+    right: 43px;
+    bottom: 724px;
+    top: 15%;
+
+    background: #D9D9D9;
+    border: 3px solid #000000;
+    box-shadow: 0px 10px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+}
+
+.button2-text{
+    position: absolute;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-size: 40px;
+    font-weight: bold;
+    right: 25%;
+    top: 25%;
+    color: #232323;
+}
+
+.button3{
+    box-sizing: border-box;
+    position: absolute;
+    width: 434px;
+    height: 122px;
+    right: 43px;
+    bottom: 724px;
+    top: 35%;
+
+    background: #D9D9D9;
+    border: 3px solid #000000;
+    box-shadow: 0px 10px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+}
+
+.button3-text{
+    position: absolute;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-size: 40px;
+    font-weight: bold;
+    right: 25%;
+    top: 25%;
+    color: #232323;
+}
+
+.button4{
+    box-sizing: border-box;
+    position: absolute;
+    width: 434px;
+    height: 122px;
+    right: 43px;
+    bottom: 724px;
+    top: 55%;
+
+    background: #D9D9D9;
+    border: 3px solid #000000;
+    box-shadow: 0px 10px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+}
+
+.button4-text{
+    position: absolute;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-size: 40px;
+    font-weight: bold;
+    right: 35%;
+    top: 25%;
+    color: #232323;
 }
 
 
