--- a/css/style.css
+++ b/css/style.css
@@ -60,14 +60,13 @@ body{
     position: absolute;
     min-width: 100%;
     height: 70px;
-    left: 0px;
-    top: 0px;
     background-color: #232323;
 }
 
 .footer{
-    position: absolute;
+    position: fixed;
     width: 100%;
+    top: 100%
     height: 50px;
     left: 0px;
     bottom: 0;
