--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
     line-height: 1;
+    display: flex;
 }
 ol, ul {
     list-style: none;
@@ -41,35 +42,34 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
-
+::-webkit-scrollbar {
+    display: none
+}
 html{
     box-sizing: border-box;
 }
 
 body{
-    background-color: #3A3A3A;
+    flex-flow: column wrap;
+    display: flex;
+    height: 100vh;
 }
 .wrapper{
     max-width: 100%;
+    max-height: 100%;
     margin: 0 auto;
 }
 
 
 .header{
-
-    position: absolute;
     min-width: 100%;
     height: 70px;
     background-color: #232323;
 }
 
 .footer{
-    position: fixed;
     width: 100%;
-    top: 100%
     height: 50px;
-    left: 0px;
-    bottom: 0;
     background: #232323;
 }
 
@@ -118,8 +118,9 @@ body{
     color: white;
 }
 
-.bodysite{
-
+main{
+    flex-grow: 1;
+    background-color: #3A3A3A;
 }
 
 .buttons{
@@ -128,6 +129,7 @@ body{
     height: 800px;
     right: 0.5%;
     top: 15%;
+    display: flex;
 }
 
 .button1{
