--- a/css/style.css
+++ b/css/style.css
@@ -1,237 +1,73 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+* {
     margin: 0;
     padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-    display: block;
-}
-body {
-    line-height: 1;
-    display: flex;
-}
-ol, ul {
-    list-style: none;
-}
-blockquote, q {
-    quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content: '';
-    content: none;
-}
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-::-webkit-scrollbar {
-    display: none
-}
-html{
     box-sizing: border-box;
+    font-family: Arial , sans-serif;
+    color: white;
+}
+
+a {
+    text-decoration: none;
 }
 
 body{
-    flex-flow: column wrap;
     display: flex;
+    flex-flow: column wrap;
     height: 100vh;
 }
-.wrapper{
-    max-width: 100%;
-    max-height: 100%;
-    margin: 0 auto;
-}
 
-
-.header{
-    min-width: 100%;
+header{
+    padding: 16px;
+    display: flex;
+    align-items: center;
+    width: 100vw;
     height: 70px;
     background-color: #232323;
 }
 
-.footer{
-    width: 100%;
-    height: 50px;
-    background: #232323;
-}
-
-
-#logo{
-    position: absolute;
-    width: 372px;
-    height: 75px;
-    left: 526px;
-    top: 39px;
-
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 64px;
-    line-height: 75px;
-    /* identical to box height */
-
-
-    color: #ffffff;
-
-}
-
 .link{
-    position: absolute;
-    width: 242px;
-    height: 80px;
-    left: 20px;
-    top: -9px;
     font-family: 'Roboto';
-    font-style: normal;
     font-weight: 700;
-    font-size: 64px;
-    line-height: 75px;
-    margin-left: 20px;
-    color: #FFFFFF;
-    text-decoration: none;
-}
-
-.container{
-    margin-left: 20px;
-    margin-top: 20px;
-}
-
-.footer-text{
+    font-size: 3rem;
     color: white;
 }
 
 main{
     flex-grow: 1;
+    width: 100vw;
+    padding: 32px;
     background-color: #3A3A3A;
 }
 
 .buttons{
-    position: absolute;
-    width: 900px;
-    height: 800px;
-    right: 0.5%;
-    top: 15%;
     display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding-left: 65vw;
 }
 
-.button1{
-    box-sizing: border-box;
-    position: absolute;
-    width: 434px;
-    height: 122px;
-    right: 43px;
-    bottom: 724px;
-
+.button {
+    text-align: center;
+    margin: 16px 0;
+    padding: 24px;
     background: #D9D9D9;
     border: 3px solid #000000;
     box-shadow: 0px 10px 4px rgba(0, 0, 0, 0.25);
     border-radius: 20px;
 }
-.button1-text{
-    position: absolute;
+.button-text{
     font-family: 'Roboto';
-    font-style: normal;
-    font-size: 40px;
+    font-size: 2rem;
     font-weight: bold;
-    right: 13%;
-    top: 25%;
     color: #232323;
 }
 
-.button2{
-    box-sizing: border-box;
-    position: absolute;
-    width: 434px;
-    height: 122px;
-    right: 43px;
-    bottom: 724px;
-    top: 15%;
-
-    background: #D9D9D9;
-    border: 3px solid #000000;
-    box-shadow: 0px 10px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 20px;
+footer{
+    width: 100vw;
+    height: 50px;
+    background: #232323;
+    display: flex;
+    align-items: center;
+    padding: 16px;
 }
-
-.button2-text{
-    position: absolute;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-size: 40px;
-    font-weight: bold;
-    right: 25%;
-    top: 25%;
-    color: #232323;
-}
-
-.button3{
-    box-sizing: border-box;
-    position: absolute;
-    width: 434px;
-    height: 122px;
-    right: 43px;
-    bottom: 724px;
-    top: 35%;
-
-    background: #D9D9D9;
-    border: 3px solid #000000;
-    box-shadow: 0px 10px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 20px;
-}
-
-.button3-text{
-    position: absolute;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-size: 40px;
-    font-weight: bold;
-    right: 25%;
-    top: 25%;
-    color: #232323;
-}
-
-.button4{
-    box-sizing: border-box;
-    position: absolute;
-    width: 434px;
-    height: 122px;
-    right: 43px;
-    bottom: 724px;
-    top: 55%;
-
-    background: #D9D9D9;
-    border: 3px solid #000000;
-    box-shadow: 0px 10px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 20px;
-}
-
-.button4-text{
-    position: absolute;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-size: 40px;
-    font-weight: bold;
-    right: 35%;
-    top: 25%;
-    color: #232323;
-}
-
 
